--- a/css/main.css
+++ b/css/main.css
@@ -1816,7 +1816,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #20d750;
+  background: #5bc952;
 }
 .links-of-blogroll {
   font-size: 13px;
